--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,16 +34,16 @@ steps:
 # Step 6: Creating docker image using docker file present in server folder
   - name: docker
     dir: 'backend'
-    args: ["build", "-t", "gcr.io/spring-and-react-295219/backend", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/backend", "."]
 
 # Step 7: pushing docker image to GCP Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/spring-and-react-295219/backend"]
+    args: ["push", "gcr.io/$PROJECT_ID/backend"]
 
 # Step 8: Deploying this image using app.yaml present in **server/src/main/appengine** to GCP **APP ENGINE**
   - name: 'gcr.io/cloud-builders/gcloud'
     dir: 'backend/src/main/appengine'
-    args: ['app', 'deploy', "--image-url=gcr.io/spring-and-react-295219/backend"]
+    args: ['app', 'deploy', "--image-url=gcr.io/$PROJECT_ID/backend"]
     timeout: "30m0s"
 
 # Step 9: This step is make sure that dispatch.yaml file is deployed once all the services are started
@@ -52,4 +52,4 @@ steps:
     args: ["app", "deploy", "dispatch.yaml", "--no_cookies"]
     timeout: "30m0s"
 timeout: "100m0s"
-images: ["gcr.io/spring-and-react-295219/backend"]
+images: ["gcr.io/$PROJECT_ID/backend"]
