--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -49,7 +49,7 @@ steps:
 # Step 9: This step is make sure that dispatch.yaml file is deployed once all the services are started
   # dispatch.yaml deployment
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "dispatch.yaml", "--no_cookies"]
+    args: ["app", "deploy", "dispatch.yaml"]
     timeout: "30m0s"
 timeout: "100m0s"
 images: ["gcr.io/$PROJECT_ID/backend"]
