--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -3,5 +3,5 @@ dispatch:
   - url: "*/api/hello/*"
     service: backend
 # Route all other urls to the React.js frontend
-  - url: "*/.*"
+  - url: "*/*"
     service: default
